--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^7.2.5",
-        "psr/log": "~1.0"
+        "psr/log": "~1.0",
+        "symfony/polyfill-php80": "^1.15"
     },
     "require-dev": {
         "doctrine/dbal": "~2.5",
