--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "psr/log": "~1.0"
     },
     "require-dev": {
-        "doctrine/dbal": "~2.5",
+        "doctrine/dbal": "^2.5|^3.0",
         "predis/predis": "~1.0"
     },
     "conflict": {
