--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "psr/log": "^1|^2|^3"
+        "psr/log": "^1|^2|^3",
+        "symfony/polyfill-php80": "^1.16"
     },
     "require-dev": {
         "doctrine/dbal": "^2.6|^3.0",
