--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "psr/log": "~1.0"
+        "psr/log": "^1|^2|^3"
     },
     "require-dev": {
         "doctrine/dbal": "^2.6|^3.0",
