Kill DBAL 2 support

--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
         "symfony/deprecation-contracts": "^2.5|^3"
     },
     "require-dev": {
-        "doctrine/dbal": "^2.13|^3.0",
+        "doctrine/dbal": "^3.6",
         "predis/predis": "^1.1|^2.0"
     },
     "conflict": {
-        "doctrine/dbal": "<2.13",
+        "doctrine/dbal": "<3.6",
         "symfony/cache": "<6.4"
     },
     "autoload": {
