--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php": ">=8.2",
-        "psr/log": "^1|^2|^3",
-        "symfony/deprecation-contracts": "^2.5|^3"
+        "psr/log": "^1|^2|^3"
     },
     "require-dev": {
         "doctrine/dbal": "^3.6",
